# Biblioteca-Liskov

./: .flake8  .gitignore  .pre-commit-config.yaml  BURNUP_CHART.md  CLAUDE.md  Makefile  README.md  TESTS_STATUS.md  burnup_timeline.md  demo_data.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  run_working_tests.py  temp_1.md  temp_10.md  temp_11.md  temp_12.md  temp_13.md  temp_14.md  temp_15.md  temp_2.md  temp_3.md  temp_4.md  temp_5.md  temp_6.md  temp_7.md  temp_8.md  temp_9.md  test_navigation.py
.github/workflows/: ci.yml  pr-checks.yml  status-checks.yml
data/: biblioteca.db
docs/: ARCHITECTURE.md  DESIGN_PATTERNS.md  INSTALLATION.md  TESTING.md  USE_CASES.md  arquitectura-clases.md  casos-de-uso.md  casos-de-uso.puml  casos-uso-alumno.puml  casos-uso-bibliotecario.puml  casos-uso-docente.puml  class-diagram-simple.mmd  class-diagram.mmd  componentes-reutilizables.md  diagrama-er.md  er-diagram.mmd  system-architecture.mmd
scripts/: check_architecture.py  create_catalog.py  init_empleados.py  test_data.py
src/: container.py
src/application/: auth_service.py  interfaces.py  services.py
src/domain/: entities.py  value_objects.py
src/infrastructure/: database.py  repositories.py
src/infrastructure/database/: __init__.py  orm.py  sqlite_connection.py
src/presentation/: console_ui.py
src/shared/: config.py  exceptions.py  logger.py  menu_utils.py
tests/: test_runner.py
tests/integration/: test_sistema_completo.py
tests/unit/: test_all_repositories.py  test_auth_service.py  test_empleado_repository.py  test_item_repository.py  test_item_service.py  test_multa_repository.py  test_multa_service.py  test_prestamo_repository.py  test_prestamo_repository_simple.py  test_prestamo_service.py  test_repositories_fixed.py  test_reserva_repository.py  test_reserva_repository_simple.py  test_reserva_service.py  test_usuario_repository.py  test_usuario_service.py
tests/unit/domain/: test_value_objects.py
